--- a/zuul.d/component-jobs-wallaby.yaml
+++ b/zuul.d/component-jobs-wallaby.yaml
@@ -692,6 +692,126 @@
       branch_override: 'stable/wallaby'
       component: tripleo
 
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cinder-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cinder-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: cinder
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cloudops-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-cloudops-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: cloudops
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: common
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: glance
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-octavia-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-octavia-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: octavia
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-security-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-security-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: security
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-compute-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-compute-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: compute
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-clients-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-clients-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: clients
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-tempest-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-tempest-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: tempest
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-network-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-network-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: network
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-swift-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-swift-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: swift
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-ui-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-ui-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: ui
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-validation-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-validation-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: validation
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-manila-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-manila-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: manila
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-baremetal-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-baremetal-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+      component: baremetal
+
 
 ## standalone-upgrade jobs
 
