WIP DNM Testing amphora build with c8s
Change-Id: I007aa3f96e38a1ec45efa32c7f89ac665545bcdc

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -36,7 +36,7 @@
 - job:
     name: octavia-build-amphora-centos8
     parent: octavia-build-amphora
-    nodeset: rdo-centos-8
+    nodeset: rdo-centos-8-stream
 
 - job:
     name: octavia-build-amphora-centos7
