Fix amphora image build for c8s
Amphora image build job was still based on centos-8, but DIB with
centos-8 has been mostly broken for a while. Switch amphora images to
centos-8-stream which is correct runtime for Wallaby and Xena.

Change-Id: I007aa3f96e38a1ec45efa32c7f89ac665545bcdc

--- a/playbooks/octavia-build-amphora/run.yaml
+++ b/playbooks/octavia-build-amphora/run.yaml
@@ -50,8 +50,16 @@
             cp /etc/yum.repos.d/delorean.repo /etc/yum.repos.d/delorean-deps.repo $PWD/rdo-repos/
             export DIB_YUM_MINIMAL_EXTRA_REPOS=$PWD/rdo-repos
           fi
+          # ansible_distribution_* don't specify if it's centos-8 or
+          # centos-8-stream.
+          # we may need to update this block for centos-9-stream.
+          if [ "{{ centos_release }}" == "8" ]; then
+            amphora_distrib_release=8-stream
+          else
+            amphora_distrib_release="{{ centos_release }}"
+          fi
           sudo --preserve-env=DIB_LOCAL_IMAGE,DIB_YUM_MINIMAL_EXTRA_REPOS \
-                /usr/bin/octavia-diskimage-create.sh -s 3 -d {{ centos_release }} -p -i centos -o amphora-x64-haproxy-centos.qcow2
+                /usr/bin/octavia-diskimage-create.sh -s 3 -d "$amphora_distrib_release" -p -i centos -o amphora-x64-haproxy-centos.qcow2
           # Create output directory
           mkdir -p images/$RELEASE
           if [ -f amphora-x64-haproxy-centos.qcow2 ]; then
