--- a/zuul.d/component-pipeline-master.yaml
+++ b/zuul.d/component-pipeline-master.yaml
@@ -194,6 +194,9 @@
         - periodic-tripleo-ci-centos-8-standalone-upgrade-tripleo-master:
             dependencies:
               - periodic-tripleo-centos-8-master-component-tripleo-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-tripleo-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-component-tripleo-promote-consistent-to-component-ci-testing
         - periodic-tripleo-ci-centos-8-standalone-tripleo-master-validation:
             dependencies:
               - periodic-tripleo-centos-8-master-component-tripleo-promote-consistent-to-component-ci-testing
