--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -10,6 +10,7 @@
     vars:
       nodes: 3ctlr_1comp
       featureset: '001'
+      baremetal_image_name: 'ipxe-uefi-boot'
 
 - job:
     name: tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset001
@@ -269,6 +270,7 @@
       release: master
       featureset_override:
         to_build: false
+      baremetal_image_name: 'ipxe-uefi-boot'
 
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-master
@@ -319,6 +321,7 @@
     vars:
       branch_override: "stable/train"
       release: train
+      baremetal_image_name: 'ipxe-boot'
 
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-train
@@ -347,6 +350,7 @@
     vars:
       branch_override: "stable/train"
       release: train
+      baremetal_image_name: 'ipxe-boot'
 
 - job:
     name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-train
@@ -385,6 +389,7 @@
     vars:
       branch_override: "stable/ussuri"
       release: ussuri
+      baremetal_image_name: 'ipxe-boot'
 
 - job:
     name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-ussuri
@@ -423,6 +428,7 @@
     vars:
       branch_override: "stable/victoria"
       release: victoria
+      baremetal_image_name: 'ipxe-boot'
 
 - job:
     name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-victoria
@@ -461,6 +467,7 @@
     vars:
       branch_override: "stable/wallaby"
       release: wallaby
+      baremetal_image_name: 'ipxe-boot'
 
 - job:
     name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-wallaby
