Fix release for containers multinode train job
Release was set to master, so train job was searching for
promotion-testing-hash-master.yml file, that doesn't exist for Centos-7

Closes-Bug: #1944719
Change-Id: I7aa642aa2d8a7220ce8c206fe134d38ef311d9c7

--- a/zuul.d/multinode-jobs.yaml
+++ b/zuul.d/multinode-jobs.yaml
@@ -19,7 +19,7 @@
     vars:
       nodes: 1ctlr
       featureset: '010'
-      release: master
+      release: train
       playbooks:
         - multinode.yml
 
